# whoberi

./: .gitignore  README.md  SPEC.md  books-plan.md  pyproject.toml
examples/: config.toml
examples/books/draws/: draws.py
examples/books/expenses/: software.py
examples/books/expenses/recurring/: recurring.py
examples/books/income/: barco.py  fooco.py
examples/books/payroll/: payroll.py
examples/reports/: gst.py  payroll.py
tests/: conftest.py  test_accounts.py  test_aggregate.py  test_books.py  test_cli.py  test_config.py  test_dateutil.py  test_delimited_io.py  test_discover.py  test_handler_discovery.py  test_handlers.py  test_heal.py  test_importer.py  test_pipeline.py  test_plugin_tests.py  test_report_discovery.py  test_reporter_discovery.py  test_reports.py  test_types.py  test_validate.py
tests/fixtures/: config.toml
tests/fixtures/books/expenses/: software.py
tests/fixtures/draws/: draws.csv  draws.py  handler.py
tests/fixtures/expenses/: handler.py  software.csv  software.py
tests/fixtures/imports/: bank.csv
tests/fixtures/income/: barco.csv  barco.py  barco.toml  fooco.csv  fooco.py  handler.py
tests/fixtures/payroll/: payroll.csv  payroll.py
whoberi/: _plugin.py  accounts.py  aggregate.py  config.py  dateutil.py  discover.py  hashing.py  heal.py  importer.py  main.py  report_context.py  report_discovery.py  reports.py  tax.py  types.py  validate.py
whoberi/ledgers/: books.py  csv_io.py  delimited_io.py  handler_discovery.py  heal.py  importer.py
whoberi/reporting/: reporter_context.py  reporter_discovery.py  reports.py
(+7 files in other folders)
