[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whoberi"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
whoberi = "whoberi.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["whoberi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
